# EconTeacher

./: .gitignore  LICENSE  README.md  pyproject.toml
econteacher/: __init__.py  download_aqa_a_level_syllabus_pdf.py  extract_mcq_answers.py  extract_mcqs.py  parse_aqa_a_level_syllabus_pdf.py  scrape_aqa_a_level_syllabus_web.py
scripts/: build_syllabus_from_pdf.py  build_syllabus_from_web.py  download_past_papers.py  extract_all_as_paper1_mcqs.py  extract_mcq_answers.py  extract_mcqs.py  validate_syllabus.py
